[gd_scene load_steps=5 format=3 uid="uid://wcqt482leide"]

[ext_resource type="Script" path="res://Chat/Chat.gd" id="1_83wp7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_knunt"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h4bue"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sxoo5"]
bg_color = Color(0.462745, 0.462745, 0.462745, 1)

[node name="Chat" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_83wp7")

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="Mess" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 27.0
offset_top = 507.0
offset_right = 490.0
offset_bottom = 538.0
theme_override_styles/focus = SubResource("StyleBoxFlat_knunt")

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 504.0
offset_top = 507.0
offset_right = 555.0
offset_bottom = 538.0
theme_override_styles/focus = SubResource("StyleBoxFlat_h4bue")
text = "SEND
"

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 17.0
offset_top = 31.0
offset_right = -13.0
offset_bottom = -675.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_sxoo5")

[node name="TextEdit" type="RichTextLabel" parent="ScrollContainer"]
custom_minimum_size = Vector2(610, 445)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 25
bbcode_enabled = true

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_left = 572.0
offset_top = 507.0
offset_right = 633.0
offset_bottom = 538.0
text = "Reload"

[connection signal="request_completed" from="HTTPRequest" to="." method="_on_http_request_request_completed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
